k8s/overlays/uat/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examxv2-backend-ingress
  namespace: uat-examxv2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: "/health" 
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "20"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "3"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/load-balancer-attributes: |
      idle_timeout.timeout_seconds=60,
      deletion_protection.enabled=true,
      routing.http2.enabled=true,
      routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false,load_balancing.algorithm.type=round_robin
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-2021-06
    alb.ingress.kubernetes.io/enable-cors: "true"
    alb.ingress.kubernetes.io/cors-allow-headers: >-
      Authorization,Content-Type,X-Requested-With,Accept,Origin,X-Forwarded-For
    alb.ingress.kubernetes.io/cors-allow-methods: 'GET,POST,OPTIONS,DELETE,PUT'
    alb.ingress.kubernetes.io/cors-allow-origin: >-
      https://api.examx.ai
    alb.ingress.kubernetes.io/cors-allow-credentials: 'true'
    alb.ingress.kubernetes.io/cors-expose-headers: Accept,Content-Type,Authorization,X-Database-Choice,X-CSRFToken,Baggage,Sentry-Trace,X-Timezone,X-Idempotency-Key
    alb.ingress.kubernetes.io/cors-max-age: '86400'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/29c7b407-7f44-4060-ab94-602a60d331a5
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  # ingressClassName: alb  # Old AWS Load Balancer Controller
  ingressClassName: examxv2-alb  # EKS Auto Mode
  rules: 
    - host: api.examx.ai
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: examxv2-backend-service 
                port:
                  number: 80
  tls:
    - hosts:
        - api.examx.ai
      secretName: tls-secret
